--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -79,14 +79,17 @@ h1 {
 }
 
 .page {
-		min-height: 100vh;
-	  font-size: 1.2rem;
+	min-height: 100vh;
+	font-size: 1.2rem;
+}
 
-		.composition {
-			background-color: #fafafa;
-		}
+.small-page {
+	min-height: 75vh;
+	font-size: 1.2rem;	
+}
 
-
+.composition {
+	background-color: #fafafa;
 }
 
 .gelatines {
@@ -100,3 +103,146 @@ h1 {
 .text-container {
 	max-width: 700px
 }
+
+.partie {
+	margin: 15px!important;
+	text-align: center;
+	.title {
+		font-size: 1.5rem!important;			
+	}
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	cursor: pointer;
+	height: 100%
+}
+
+.partie:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.parties {
+	display: grid;
+	grid-gap: 20px;
+}
+
+.parties-4 {
+	grid-template-columns: repeat(4, 1fr);	
+}
+.parties-3 {
+	grid-template-columns: repeat(3, 1fr);	
+}
+.parties-2 {
+	grid-template-columns: repeat(2, 1fr);	
+}
+
+.alternative {
+	background-color: #00D1B2;
+}
+
+.is-primary {
+	h1 {
+		color: #fafafa!important;
+	}
+}
+.container {
+	.title.is-1 {
+		margin-bottom: 15vh;
+	}
+}
+
+.content-modal {
+	background-color: #fafafa;
+	padding: 65px;
+	border-radius: 15px;
+	h1 {
+		font-size: 3rem;
+	}
+}
+
+.close {
+	border: none;
+	border-radius: 290486px;
+	cursor: pointer;
+	display: inline-block;
+	height: 32px;
+    max-height: 32px;
+    max-width: 32px;
+    min-height: 32px;
+    min-width: 32px;
+    width: 32px;
+	outline: none;
+	position: absolute;
+	background: transparent;
+	top: 0;
+	right: 0;
+	margin: 15px;
+	color: #4A4A4A;
+	font-size: 1.5em;
+}
+
+.modal-content {
+	width: 1000px!important
+}
+
+.page a {
+	padding-top: 40px;
+	display: inline-block;
+	position: absolute;
+	margin-top: 40vh;
+	transition: all 200ms ease-in-out;
+
+	&:hover {
+		opacity: 0.5	;
+		color:#00D1B2;
+	}	
+
+	&.white {
+		color: #fafafa!important; 
+		&:hover {
+			color: #fafafa
+		}
+		span {
+			border-color: #fafafa!important;
+		}
+	}
+}
+
+  .page a span {
+	position: absolute;
+	left: 50%;
+	top: 0;
+	width: 24px;
+	height: 24px;
+	margin-left: -12px;
+	border-left: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+	-webkit-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-animation: scrollAnim 2s infinite;
+	animation: scrollAnim 2s infinite;
+	box-sizing: border-box;
+	border-width: 3px;
+	border-color: #00D1B2;
+  }
+  @-webkit-keyframes scrollAnim {
+	0% {
+	  -webkit-transform: rotate(-45deg) translate(0, 0);
+	}
+	20% {
+	  -webkit-transform: rotate(-45deg) translate(-10px, 10px);
+	}
+	40% {
+	  -webkit-transform: rotate(-45deg) translate(0, 0);
+	}
+  }
+  @keyframes scrollAnim {
+	0% {
+	  transform: rotate(-45deg) translate(0, 0);
+	}
+	20% {
+	  transform: rotate(-45deg) translate(-10px, 10px);
+	}
+	40% {
+	  transform: rotate(-45deg) translate(0, 0);
+	}
+  }
